--- a/app.json
+++ b/app.json
@@ -28,6 +28,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app needs access to your camera in order tot ake photos of your favorite places"
+        }
+      ]
+    ]
   }
 }
